[gd_scene load_steps=13 format=3 uid="uid://d2g3uyxbwrft7"]

[ext_resource type="Script" uid="uid://dpn2ry2bhpgtu" path="res://screens/start_menus/main_menu/exit_popup/exit_popup.gd" id="1_gb7fo"]
[ext_resource type="Shader" uid="uid://boa325ynfrjd4" path="res://global_assets/shaders/perspective_shader.gdshader" id="2_6egwy"]
[ext_resource type="Texture2D" uid="uid://cn55oyioklvcm" path="res://screens/start_menus/main_menu/exit_popup/assets/exit_popup_bg.png" id="2_kit51"]
[ext_resource type="Texture2D" uid="uid://c7mscn3rx0227" path="res://screens/start_menus/main_menu/exit_popup/assets/yes_button.png" id="3_ql66j"]
[ext_resource type="Texture2D" uid="uid://cl33q3mys2ojn" path="res://screens/start_menus/main_menu/exit_popup/assets/yes_button_selected.png" id="4_3q7yh"]
[ext_resource type="Texture2D" uid="uid://dhjmmj3feu8md" path="res://screens/start_menus/main_menu/exit_popup/assets/no_button.png" id="5_ucehu"]
[ext_resource type="Texture2D" uid="uid://bo48c5eognye3" path="res://screens/start_menus/main_menu/exit_popup/assets/no_button_selected.png" id="6_r7jxr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0wmjq"]
shader = ExtResource("2_6egwy")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 8.55e-06
shader_parameter/inset = 0.0

[sub_resource type="Animation" id="Animation_crsgj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("YesButton:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NoButton:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Bg:material:shader_parameter/x_rot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [8.55e-06]
}

[sub_resource type="Animation" id="Animation_4lmuf"]
resource_name = "appear"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bg:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("YesButton:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NoButton:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Bg:material:shader_parameter/x_rot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-40.0, 8.00001, -3.99999, 8.55e-06]
}

[sub_resource type="Animation" id="Animation_kmv3p"]
resource_name = "dissapear"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0.6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("YesButton:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0.6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NoButton:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0.6)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Bg:material:shader_parameter/x_rot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 0.420448),
"update": 0,
"values": [8.55e-06, -60.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8n75"]
_data = {
&"RESET": SubResource("Animation_crsgj"),
&"appear": SubResource("Animation_4lmuf"),
&"dissapear": SubResource("Animation_kmv3p")
}

[node name="ExitPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gb7fo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.666667)

[node name="Bg" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_0wmjq")
layout_mode = 0
offset_left = 451.0
offset_top = 328.0
offset_right = 1451.0
offset_bottom = 771.0
pivot_offset = Vector2(513, 24)
texture = ExtResource("2_kit51")

[node name="YesButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 748.0
offset_top = 610.0
offset_right = 925.0
offset_bottom = 728.0
pivot_offset = Vector2(92, 54)
texture_normal = ExtResource("3_ql66j")
texture_focused = ExtResource("4_3q7yh")

[node name="NoButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 981.0
offset_top = 610.0
offset_right = 1158.0
offset_bottom = 728.0
pivot_offset = Vector2(88, 58)
texture_normal = ExtResource("5_ucehu")
texture_focused = ExtResource("6_r7jxr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v8n75")
}

[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
